[package]
name = "bevy-ddbt"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.18.1"
bevy_transform = { version = "0.18.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2.21"

[features]
bevy_transform = ["dep:bevy_transform"]
